Optimize a few assets

--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@ skills:
             an Information Engineering major at Universitas Gadjah Mada. I am
             quite a quiet person&mdash;both in real life and on the internet&mdash;and a semi-perfectionist. I sometimes love
             making IT-related things from scratch (this site is one of them). Aside
-            from tech, I also love a small subset of Japanese culture.</p>
+            from tech, I also enjoy a small subset of Japanese culture.</p>
         <div class="scroll_cta entrance">
             <span>Scroll to see more</span>
             {% include_relative _svg/arrow-down.svg %}
