Change heading text
Change "Skills" to "Current Skills"

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@ skills:
 </section>
 <div class="section_divider"></div>
 <section class="skills">
-    <h1>Skills</h1>
+    <h1>Current Skills</h1>
     <div class="container">
         {%- for skill in page.skills -%}
         <div class="card">
