--- a/index.html
+++ b/index.html
@@ -1,17 +1,104 @@
 ---
-layout: landing
 ---
+<!DOCTYPE html>
+<html>
 
-<div class="background"></div>
-<div class="main_container">
-    <nav class="top_nav entrance">{% include navigation.html active="home" %}</nav>
-    <div class="middle_hero entrance">
-        {% capture logo %} {% include comfyte-logo.svg %} {% endcapture %} {{ logo | replace: 'svg width=', 'svg class="entrance" width=' | replace: 'id="upper', 'class="entrance" id="upper' | replace: 'id="lower', 'class="entrance" id="lower' }}
-        <h1 class="entrance">Farrel R</h1>
-        <div class="desc_text entrance">
-            <h2 class="main">Tech enthusiast</h2>
-        </div>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        @import url('https://rsms.me/inter/inter.css');
+
+        :root {
+            --content-color: #333333;
+            --link-color: #2962FF;
+        }
+
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            font-family: 'Inter', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        h1 {
+            font-weight: normal;
+            font-size: 1.25em;
+            color: var(--content-color);
+            text-align: center;
+            margin: 0.75em 0 0.5em 0;
+        }
+
+        h1 + span {
+            display: block;
+            text-align: center;
+            font-size: 0.75em;
+        }
+
+        h1 + span a {
+            color: var(--link-color);
+        }
+
+        .social_buttons {
+            display: block;
+            margin: -1.25em 0 0 0;
+            padding: 0;
+            cursor: default;
+            text-align: center;
+            position: relative;
+            top: 5rem;
+        }
+
+        .social_buttons li {
+            display: inline-block;
+            vertical-align: top;
+            margin: 0 0.3rem;
+        }
+        .social_buttons li:first-child { margin-left: 0; }
+        .social_buttons li:last-child { margin-right: 0; }
+
+        .social_buttons a {
+            display: block;
+        }
+
+        .social_buttons svg {
+            display: block;
+            fill: var(--content-color);
+            opacity: 0.4;
+            height: 1.25em;
+            width: auto;
+        }
+
+        .container > svg {
+            display: block;
+            width: 4em;
+            height: 4em;
+            margin: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        {% include cfy-logo-underconstruction.svg %}
+        <h1>This site is currently under construction</h1>
+        <span><a href="https://comfyte.com/landing-preview">Want to take a peek?</a></span>
+        <ul class="social_buttons">
+            <li><a href="https://twitter.com/comfyte"               title="Twitter"         >{% include social-icons/twitter.svg    %}</a></li>
+            <li><a href="https://instagram.com/comfyte"             title="Instagram"       >{% include social-icons/instagram.svg  %}</a></li>
+            <li><a href="https://github.com/comfyte"                title="GitHub"          >{% include social-icons/github.svg     %}</a></li>
+            <li><a href="https://myanimelist.net/profile/comfyte"   title="MyAnimeList"     >{% include social-icons/traced-mal.svg %}</a></li>
+            <li><a href="https://open.spotify.com/user/m12farrel"   title="Spotify Profile" >{% include social-icons/spotify.svg    %}</a></li>
+        </ul>
     </div>
-    <div class="bottom_social entrance">{% include social-buttons.html %}</div>
-</div>
-<div class="attribution entrance">{%- include info-circle.svg -%}<span>Loading background...</span></div>
+</body>
+
+</html>
