--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
 
     <style>
         @import url('https://rsms.me/inter/inter.css');
