Add padding to container

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             align-items: center;
             justify-content: center;
         }
+        
+        .container {
+            padding: 0 1rem;
+        }
 
         h1 {
             font-weight: normal;
