Update base URL to match the new domain name

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     <div class="container">
         {% include cfy-logo-underconstruction.svg %}
         <h1>This site is currently under construction</h1>
-        <span><a href="https://comfyte.com/landing-preview">Want to take a peek?</a></span>
+        <span><a href="/landing-preview">Want to take a peek?</a></span>
         <ul class="social_buttons">
+            <li><a href="https://github.com/comfyte"                title="GitHub"          >{% include social-icons/github.svg     %}</a></li>
             <li><a href="https://twitter.com/comfyte"               title="Twitter"         >{% include social-icons/twitter.svg    %}</a></li>
             <li><a href="https://instagram.com/comfyte"             title="Instagram"       >{% include social-icons/instagram.svg  %}</a></li>
-            <li><a href="https://github.com/comfyte"                title="GitHub"          >{% include social-icons/github.svg     %}</a></li>
             <li><a href="https://myanimelist.net/profile/comfyte"   title="MyAnimeList"     >{% include social-icons/traced-mal.svg %}</a></li>
-            <li><a href="https://open.spotify.com/user/m12farrel"   title="Spotify Profile" >{% include social-icons/spotify.svg    %}</a></li>
+            <!-- <li><a href="https://open.spotify.com/user/m12farrel"   title="Spotify Profile" >{% include social-icons/spotify.svg    %}</a></li> -->
         </ul>
     </div>
 </body>
