Update some activity informations

--- a/about/index.html
+++ b/about/index.html
@@ -131,6 +131,23 @@ skills:
     <ul class="container">
         <div class="line"></div>
         <li class="card">
+            <span>2021 (current)</span>
+            <span>IT & Network Division</span>
+            <span>PPSMB Kesatria FT UGM 2021</span>
+        </li>
+        <li class="card">
+            <span>2021</span>
+            <span>Web Division</span>
+            <span>NESCO 2021</span>
+            <span><a class="relevant_link" target="_blank" href="https://nesco-ugm.com">Go to website{% include external-link-alt.svg %}</a></span>
+        </li>
+        <li class="card">
+            <span>2020</span>
+            <span>IT Division</span>
+            <span>Pemilwa UGM 2020</span>
+            <span><a class="relevant_link" target="_blank" href="https://kpum.wg.ugm.ac.id/2020">Go to website{% include external-link-alt.svg %}</a></span>
+        </li>
+        <li class="card">
             <span>2020</span>
             <span>Web Division</span>
             <span>FIND IT! 2020</span>
@@ -144,7 +161,7 @@ skills:
             <span>2017</span>
             <span>Multimedia Division</span>
             <span>ICEF Teladan 2017</span>
-            <span>(<a class="external_link" target="_blank" href="https://youtu.be/wcnvv4pLa5U">Relevant work{% include external-link-alt.svg %}</a>)</span>
+            <span><a class="relevant_link" target="_blank" href="https://youtu.be/wcnvv4pLa5U">Relevant work{% include external-link-alt.svg %}</a></span>
         </li>
         <li class="card">
             <span>2017</span>
