Add disclaimer about outdated informations
+ update some strings and styles

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         }
 
         h1 {
-            font-weight: normal;
             font-size: 1.25em;
+            font-weight: bold;
+            letter-spacing: -0.025em;
             color: var(--content-color);
             text-align: center;
             margin: 0.75em 0 0.5em 0;
@@ -104,7 +105,7 @@
 <body>
     <div class="container">
         {% include cfy-logo-underconstruction.svg %}
-        <h1>This site is currently under construction</h1>
+        <h1>Site is currently under construction</h1>
         <span><a href="/landing-preview">Want to take a peek?</a></span>
         <ul class="social_buttons">
             <li><a href="https://github.com/comfyte"                title="GitHub"          >{% include social-icons/github.svg     %}</a></li>
